--- a/style.css
+++ b/style.css
@@ -1,218 +1,334 @@
-*{
-      margin:0;
-      padding:0;
+* {
+      margin: 0;
+      padding: 0;
 }
+
 body {
       background-color: #ffffff;
       font: 18px/26px 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-}
-
-.nav {height: 50px;
-border-top: 1px solid transparent;
-
-background-color: #ffffff;
-line-height: 50px;
 
 }
+
+.nav {
+      height: 50px;
+      border-top: 1px solid transparent;
+
+      background-color: #ffffff;
+      line-height: 50px;
+
+}
+
 .nav a {
-      padding:0 20px;
+      padding: 0 20px;
       text-decoration: none;
-      color:#0B5131;
+      color: #0B5131;
       font-size: 20px;
       height: 50px;
-      display:inline-block ;
+      display: inline-block;
 }
-nav p{
+
+nav p {
       background-color: #0B5131;
-      color:#ffffff;
-    
+      color: #ffffff;
+
 }
+
 .nav a:hover {
       background-color: #0B5131;
-      color:#ffffff;
+      color: #ffffff;
+}
+/*index*/
+#screen {
+      width: 800px;
+      height: 500px;
+      overflow: hidden;
+      margin: auto;
+}
+
+#screen #rolling {
+      width: 9900px;
+      height: 9900px;
+      animation: 6s myself infinite;
+}
+
+#screen #rolling img {
+      float: left
+}
+
+
+@keyframes myself {
+      0% {}
+
+      33% {
+            transform: translateX(0px);
+      }
+
+      66% {
+            transform: translateX(-800px);
+      }
+
+      100% {
+            transform: translateX(-1600px);
+      }
+
+}
+
+.title {
+      color: #0B5131;
+      width: 300px;
+      height: 30px;
+      margin: 20px;
+}
+
+table {
+      width: 1300px;
+      height: 150px;
+      margin: auto;
+}
+
+.underline {
+      text-decoration: underline;
+
+      width: 90px;
+
+}
+
+.bold {
+      width: 1300px;
+      height: 70px;
+      margin: auto;
+
+}
+
+.bold li {
+      list-style: none;
+      display: inline-block;
+      width: 180px;
+      height: 28px;
+      background-color: #0B5131;
+      text-align: center;
+      margin: 0 30px;
+}
+
+.bold li a {
+
+      font-weight: 500;
+      color: #ffffff;
+      text-decoration: none;
+
+}
+
+.bold li a:hover {
+      font-weight: 700;
+      color: #ffffff;
 }
 
 /* introduction*/
-.bigbox{
+.bigbox {
       height: 525px;
       width: 1300px;
-      margin:0 auto;
+      margin: 0 auto;
 }
-.bigbox .protrait{
+
+.bigbox .protrait {
       height: 500px;
       width: 260px;
-      border: 2px solid #0B5131;   
-      background-color: #ffffff; 
-      float:left;
+      border: 2px solid #0B5131;
+      background-color: #ffffff;
+      float: left;
 }
+
 .bigbox .protrait img {
-      width:240px; 
-      height:330px;
-      margin:10px;
+      width: 240px;
+      height: 330px;
+      margin: 10px;
 }
-.bigbox .protrait p{
+
+.bigbox .protrait p {
       height: 16px;
       font-size: 16px;
       margin: 8px 10px;
 }
 
-.bigbox .intro{
+.bigbox .intro {
       float: right;
       height: 500px;
       width: 1000px;
-      border: 2px solid #0B5131;  
-      background-color: #ffffff; 
-     
+      border: 2px solid #0B5131;
+      background-color: #ffffff;
+
 
 }
-.bigbox .intro h3{
+
+.bigbox .intro h3 {
       margin: 20px;
-      color:#0B5131;
+      color: #0B5131;
 }
+
 .bigbox .intro ul {
-      margin:20px 40px;
+      margin: 20px 40px;
 
 }
-.bigbox .intro p{
+
+.bigbox .intro p {
       font-size: 18px;
       height: 150px;
       width: 900px;
-      padding:50px;
+      padding: 50px;
 }
+
 em {
-      color:#0B5131 ;
+      color: #0B5131;
       font-weight: 700px;
       font-style: normal;
 }
 
 /*skills */
-.skills-box1{
+.skills-box1 {
 
       height: 200px;
-      border:1px solid transparent;
-      border-top:4px;
+      border: 1px solid transparent;
+      border-top: 4px;
 }
+
 .skills-box1 ol {
-      border: 2px solid  #0B5131 ;
-      width: 900px;
-      margin:auto;
-      background-color: white;
-}
-.skills-box1 ol li{
-      margin:10px auto;
-      list-style: none;
-      text-indent: 2em;
-}
-.skills-box1 h3{
-      height: 20px;
-      margin:20px 20px;
-      font-size: 25px;
-      color: #0B5131;
-
-}
-.skills-box2{
-
-      height: 200px;
-      border:1px solid transparent;
-      border-top:4px;
-}
-.skills-box2 ol {
-      border: 2px solid #0B5131  ;
-      width: 900px;
-      margin:auto;
-      background-color: white;
-}
-.skills-box2 ol li{
-      margin:10px auto;
-      list-style: none;
-      text-indent: 2em;
-}
-.skills-box2 h3{
-      height: 20px;
-      margin:20px 20px;
-      font-size: 25px;
-      color: #0B5131;
-
-}
-.skills-box3{
-
-      height: 200px;
-      border:1px solid transparent;
-      border-top:4px;
-}
-.skills-box3 ol {
-      border: 2px solid #0B5131 ;
+      border: 2px solid #0B5131;
       width: 900px;
       margin: auto;
       background-color: white;
-     
 }
-.skills-box3 ol li{
-      margin:10px auto;
+
+.skills-box1 ol li {
+      margin: 10px auto;
       list-style: none;
       text-indent: 2em;
 }
-.skills-box3 h3{
+
+.skills-box1 h3 {
       height: 20px;
-      margin:20px 20px;
+      margin: 20px 20px;
       font-size: 25px;
       color: #0B5131;
 
 }
-.skills-box4{
+
+.skills-box2 {
+
       height: 200px;
-      border:1px solid transparent;
-      border-top:4px;
+      border: 1px solid transparent;
+      border-top: 4px;
 }
-.skills-box4 ol {
-      border: 2px solid #0B5131  ;
+
+.skills-box2 ol {
+      border: 2px solid #0B5131;
       width: 900px;
-      margin:auto;
+      margin: auto;
       background-color: white;
 }
-.skills-box4 ol li{
-      margin:10px auto;
+
+.skills-box2 ol li {
+      margin: 10px auto;
       list-style: none;
       text-indent: 2em;
 }
-.skills-box4 h3{
+
+.skills-box2 h3 {
       height: 20px;
-      margin:0 20px 20px 20px;
+      margin: 20px 20px;
       font-size: 25px;
       color: #0B5131;
 
 }
-.direction{ 
+
+.skills-box3 {
+
+      height: 200px;
+      border: 1px solid transparent;
+      border-top: 4px;
+}
+
+.skills-box3 ol {
+      border: 2px solid #0B5131;
+      width: 900px;
+      margin: auto;
+      background-color: white;
+
+}
+
+.skills-box3 ol li {
+      margin: 10px auto;
+      list-style: none;
+      text-indent: 2em;
+}
+
+.skills-box3 h3 {
+      height: 20px;
+      margin: 20px 20px;
+      font-size: 25px;
+      color: #0B5131;
+
+}
+
+.skills-box4 {
+      height: 200px;
+      border: 1px solid transparent;
+      border-top: 4px;
+}
+
+.skills-box4 ol {
+      border: 2px solid #0B5131;
+      width: 900px;
+      margin: auto;
+      background-color: white;
+}
+
+.skills-box4 ol li {
+      margin: 10px auto;
+      list-style: none;
+      text-indent: 2em;
+}
+
+.skills-box4 h3 {
+      height: 20px;
+      margin: 0 20px 20px 20px;
+      font-size: 25px;
+      color: #0B5131;
+
+}
+
+.direction {
       text-align: center;
       height: 80px;
-   
+
 }
-.direction h3{
+
+.direction h3 {
       height: 25px;
       width: 250px;
       border: 1px solid transparent;
-      margin:10px;
+      margin: 10px;
       color: #0B5131;
-    
+
 }
-.direction p{
+
+.direction p {
       color: #0B5131;
       height: 10px;
       width: 40px;
       display: inline;
       font-size: 20px;
       font-weight: 700;
-    
+
 }
 
 /*hobbies*/
 .photos {
-    width: 1300px;
-    height: 525px;
-    
-    margin: auto;
+      width: 1300px;
+      height: 525px;
+
+      margin: auto;
 }
+
 .photos .figure1 {
       height: 500px;
       width: 420px;
@@ -220,20 +336,22 @@ em {
       float: left;
 
 }
-.photos .figure1 h3{
+
+.photos .figure1 h3 {
       font-size: 20px;
-      margin:10px ;
+      margin: 10px;
       color: #0B5131;
-     
-}
-.photos .figure1 img {
-height: 280px;
-width: 420px;
+
 }
 
-.photos .figure1 p{
+.photos .figure1 img {
+      height: 280px;
+      width: 420px;
+}
+
+.photos .figure1 p {
       text-align: left;
-      padding:20px 10px;
+      padding: 20px 10px;
 }
 
 .photos .figure2 {
@@ -244,21 +362,24 @@ width: 420px;
       margin-left: 20px;
 
 }
-.photos .figure2 h3{
+
+.photos .figure2 h3 {
       font-size: 20px;
-      margin:10px ;
+      margin: 10px;
       color: #0B5131;
-     
-}
-.photos .figure2 img {
-       height: 280px;
-       width: 420px;
+
 }
 
-.photos .figure2 p{
-      text-align: left;
-      padding:20px 10px;
+.photos .figure2 img {
+      height: 280px;
+      width: 420px;
 }
+
+.photos .figure2 p {
+      text-align: left;
+      padding: 20px 10px;
+}
+
 .photos .figure3 {
       height: 500px;
       width: 420px;
@@ -266,102 +387,35 @@ width: 420px;
       float: right;
 
 }
-.photos .figure3 h3{
+
+.photos .figure3 h3 {
       font-size: 20px;
-      margin:10px ;
+      margin: 10px;
       color: #0B5131;
-     
+
 }
+
 .photos .figure3 img {
       height: 280px;
       width: 420px;
 }
 
-.photos .figure3 p{
+.photos .figure3 p {
       text-align: left;
-      padding:20px 10px;
-}
-
-/*index*/
- #screen{
-      width: 800px;
-      height: 500px;
-      overflow: hidden;
-      margin: auto;   
-}
- #screen #rolling{
-      width: 9900px;
-      height: 9900px;
-      animation: 6s myself infinite;     
-}
-
- #screen #rolling img{
- float:left
+      padding: 20px 10px;
 }
 
 
-@keyframes myself{
-      0%{}
-      33%{transform: translateX(0px);}
-      66%{transform: translateX(-800px);}
-      100%{transform: translateX(-1600px);}
-      
-}
-.title{
-      color: #0B5131;
-      width: 300px;
-      height: 30px;
-      margin: 20px;
-}
-
-table{
-      width: 1300px;
-      height: 150px;
-      margin: auto;
-}
-
- .underline{  
-       text-decoration: underline;
-      
-       width: 90px;
-
-}
-.bold{
-      width: 1300px;
-      height: 70px;
-      margin: auto;
-
-}
-.bold li {
-      list-style: none;
-      display: inline-block;
-      width: 180px;
-      height: 28px;
-      background-color: #0B5131;
-      text-align: center;
-      margin: 0 30px;
-}
-.bold li a{
-    
-      font-weight: 500;
-    color:#ffffff;
-    text-decoration: none;
-   
-}
-.bold li a:hover{ 
-     font-weight:700;
-     color:#ffffff;
-}
 /*footer*/
 .foot {
       background-color: #0B5131;
       color: #ffffff;
       text-align: center;
       height: 50px;
-      width: 100% ;
-      float: left;   
-}
-.foot ul li{
-      list-style: none;
+      width: 100%;
+      float: left;
 }
 
+.foot ul li {
+      list-style: none;
+}
