Add verifiable forms

--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ body {
 
 .nav {
       height: 50px;
+      width: 100%;
       border-top: 1px solid transparent;
-
-      background-color:rgb(238, 233, 233);
+      background-color:rgb(240, 234, 234);
       line-height: 50px;
-
-}
+      }
 
 .nav a {
-      padding: 0 20px;
+
+      padding: 0 10px;
       text-decoration: none;
       color: #0B5131;
       font-size: 20px;
@@ -71,7 +71,7 @@ nav p {
             transform: translateX(-800px);
       }
       66% {
-            transform: translateX(-1600px);
+            transform: translateX(-800px);
       }
       100% {
             transform: translateX(-1600px);
@@ -265,7 +265,6 @@ em {
       background-color: white;
       border-radius: 10px;
       box-shadow: 5px 5px 15px 5px rgb(177, 174, 174);
-
 }
 
 .skills-box3 ol li {
@@ -337,7 +336,6 @@ em {
 }
 
 /*hobbies*/
-
 .hidden {
       clip: rect(0 0 0 0);
       clip-path: inset(50%);
@@ -443,7 +441,6 @@ em {
 
 .foot ul li {
       list-style: none;
-      
 }
 .foot ul li a{
       font-weight: 500;
@@ -451,4 +448,76 @@ em {
       text-decoration: none;
      font-weight: 700;
      font-size: 18px;
+}
+.foot ul li a:hover{
+      outline:none;
+      color:  #000000;}
+/*form*/
+
+
+
+
+form {
+      width: 50%;
+      margin: 3em auto;
+      height: 420px;
+
+
+    }
+    label {
+      display: block;
+      font-weight: 700;
+    }
+
+.form-input{
+      width: 100%;
+      padding: 10px;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      font-size: 18px;
+      margin-bottom: 2em;
+      margin: 10px auto;
+      display: block;
+
+
+}
+.form-input:focus{
+      outline:none;
+      border: 2px solid #0B5131;
+}
+ textarea {
+      height: 150px;
+      resize: vertical;
+    }
+
+ [type="submit"] {
+      width: 100%;
+      border-radius: 4px;
+      background-color: #0B5131;
+
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 16px;
+      letter-spacing: 1px;
+      border: 10px solid #0B5131;
+      cursor: pointer;
+      text-transform: uppercase;
+
+
+}
+
+
+[type="submit"]:hover ,
+[type="submit"]:focus{
+      color: black;
+
+}
+.error{
+      border-color: #ff0000;
+
+}
+.error-message{
+      color: #ff0000;
+      margin: -0.5em 0 1em;
+
 }
