--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   width: 100%;
   text-align: center;
   display: inline-block;
- 
+
 }
 
 nav p {
@@ -46,7 +46,7 @@ nav p {
 
 /* Slideshow container */
 .slideshow-container {
-  
+
   width:50%;
   height: auto;
   position: relative;
@@ -72,6 +72,8 @@ nav p {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background-color: transparent;
+  border: 0;
 }
 
 /* Position the "next button" to the right */
@@ -185,14 +187,14 @@ table {
   background-color: #ffffff;
  box-sizing: border-box;
   margin: 10px;
-  
+
 }
 
 .bigbox .protrait img {
   width: 90%;
   height: auto;
   margin: 5% ;
-  
+
 }
 
 .bigbox .protrait .sketch {
@@ -206,8 +208,8 @@ table {
   width: 75%;
   margin: 10px;
   border: 2px solid #0b5131;
-  background-color: #ffffff;  
- 
+  background-color: #ffffff;
+
 }
 
 .bigbox .intro h3 {
@@ -225,7 +227,7 @@ table {
 
 .bigbox .intro p {
   font-size: 18px;
- 
+
   width: 85%;
   height: auto;
   margin: 20px 50px;
@@ -291,7 +293,7 @@ em {
 }
 
 .skills-box2 h3 {
-  
+
   margin: 20px;
   font-size: 25px;
   color: #0b5131;
@@ -321,7 +323,7 @@ em {
 }
 
 .skills-box3 h3 {
- 
+
   margin: 20px;
   font-size: 25px;
   color: #0b5131;
@@ -358,14 +360,14 @@ em {
 }
 
 .direction {
- 
+
   height: auto;
   width: 100%;
   margin-bottom: 10px;
 }
 
 .direction h3 {
- 
+
 
   margin: 20px;
   font-size: 25px;
@@ -497,7 +499,7 @@ label {
   border: 2px solid #0b5131;
 }
 textarea {
-  
+
   height: 150px;
   resize: vertical;
 }
