--- a/style.css
+++ b/style.css
@@ -35,11 +35,17 @@ nav p {
   background-color: #0b5131;
   color: #ffffff;
 }
-
-.nav a:hover {
+/* .nav a:hover 
+{
   background-color: #0b5131;
   color: #ffffff;
+}*/
+.current
+{
+  background-color: white;
+  color: #ffffff;
 }
+
 /*index*/
 
 * {box-sizing:border-box}
